unpackaged/main/default/objects/Case/fields/Backup_contact__c.field-meta.xml
<CustomField>
    <fullName>Backup_contact__c</fullName>
    <label>Backup contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>