unpackaged/main/default/objects/Case/fields/Contact_country__c.field-meta.xml
<CustomField>
    <fullName>Contact_country__c</fullName>
    <label>Contact country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>