unpackaged/main/default/objects/Case/fields/Contact_region__c.field-meta.xml
<CustomField>
    <fullName>Contact_region__c</fullName>
    <label>Contact region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>