unpackaged/main/default/objects/Case/fields/New_contact__c.field-meta.xml
<CustomField>
    <fullName>New_contact__c</fullName>
    <label>New contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>