unpackaged/main/default/objects/Case/fields/new_demo_case__c.field-meta.xml
<CustomField>
    <fullName>new_demo_case__c</fullName>
    <label>new demo case</label>
    <length>100</length>
    <type>Text</type>
</CustomField>