unpackaged/main/default/objects/Case/fields/Sandbox_demo__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_demo__c</fullName>
    <label>Sandbox demo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>